Fix links break at input box

--- a/src/Components/ColumnMiddle/InputBoxControl.css
+++ b/src/Components/ColumnMiddle/InputBoxControl.css
@@ -5,36 +5,38 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-.inputbox-attach-icon{
+.inputbox-attach-icon {
     transform: rotateZ(45deg);
 }
 
-.inputbox-wrapper{
+.inputbox-wrapper {
     padding: 0 12px;
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    border-top: 1px solid #E9EBED;
+    border-top: 1px solid #e9ebed;
 }
 
-#inputbox-message{
+#inputbox-message {
     box-shadow: 0 0 0 0;
     max-height: 150px;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 22px 0 22px 0;
     white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 #inputbox-message:empty::before {
     content: attr(placeholder);
-    color: #8E9396;
+    color: #8e9396;
     pointer-events: none;
 }
 
 #inputbox-message:empty:active::before,
 #inputbox-message:empty:focus::before {
-    opacity: .75;
+    opacity: 0.75;
 }
 
 #inputbox-message:focus {
@@ -43,24 +45,23 @@
     box-shadow: 0 0 0 0;
 }
 
-.inputbox-attach-button{
+.inputbox-attach-button {
     display: none;
 }
 
-.inputbox-middle-column{
+.inputbox-middle-column {
     flex-grow: 1;
 }
 
-.inputbox-left-column{
+.inputbox-left-column {
     margin-right: 20px;
 }
 
-.inputbox-middle-column{
+.inputbox-middle-column {
     flex-grow: 1;
 }
 
-.inputbox-right-column{
+.inputbox-right-column {
     margin-left: 20px;
     min-width: 96px;
 }
-
